# bintable

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bintable.h  bintableheader.cpp  bintableheader.h  bintablepython.cpp  bintablestring.cpp  bintablestring.h  bintabletypes.h  main.cpp  setup.py
bintable/: __init__.py  bintable.py
bintable/native/: bintable.cpp  bintable.h  common.h  exceptions.h  header.cpp  header.h  ioutils.cpp  ioutils.h  numpy.cpp  numpy.h  python.cpp  pythonutils.cpp  pythonutils.h  tablestring.cpp  tablestring.h  types.cpp  types.h  utils.cpp  utils.h  writer.cpp  writer.h
bintable/native/operations/: operations.cpp  operations.h  tableoperations.cpp  tableoperations.h
bintable/native/streams/: bufferedstreams.cpp  bufferedstreams.h  constantstream.cpp  constantstream.h  memorystreams.cpp  memorystreams.h  streams.h
test/: simple_program.py  simple_test.py  simple_tests.py  simple_write.py  unicode_test.py
